--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -36,7 +36,7 @@
 
 						<div class="d-flex justify-content-center">
 						<button type="submit" 
-							class="btn btn-success btn-block btn-md gradient-custom-4 text-body">Register</button>
+							class="btn btn-success btn-block btn-md gradient-custom-4 text-body">Login</button>
 						</div>
 
 						<p class="text-center text-muted mt-3 mb-0">Don't have an account? <a href="#!"
