--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" /> -->
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>KanDo</title>
     <link rel="stylesheet" href="{% static 'styles/header.css' %}" />
@@ -13,9 +14,13 @@
     <link rel="stylesheet" href="{% static 'styles/dashboard.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/register.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/toast.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles/dropdown.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <script>
       
       
@@ -163,6 +168,13 @@
       }
       
 
+      /* item */
+      function deleteItem(id){
+        var item = document.querySelector("#" + id);
+        item.parentElement.remove();
+      }
+
+
       /* project */
       function openNewProjectCreation(){
         document.getElementById("exampleModalLabel").textContent="List Name"             
@@ -208,6 +220,8 @@
         closeNav();
       }
 
+
+      
     </script>
     
   </head>
@@ -266,14 +280,20 @@
 
       {% endblock %}
       {% include 'toast.html' %}
+      
     </div>
-   
+
+  
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     
     <!-- SortableJS for sorting elements as boards and items -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script> 
     
+    
+    <script src="{% static 'js/dropdown.js' %}"></script> 
+    
+
     <!-- references
     https://github.com/SortableJS/Sortable
     https://sortablejs.github.io/Sortable/ 
@@ -306,7 +326,7 @@
         });
         
       }
-      
+ 
       
     </script>
   </body>
