--- a/dashboard/templates/dashboard/item.html
+++ b/dashboard/templates/dashboard/item.html
@@ -5,16 +5,16 @@
     
     <!-- the ids and arguments should be created dinamically -->
     <div class="dropdown col-sm-2" id="{{id}}" onclick="toggleDropdown(this.id)">
-        <button class="btn">
+        <button class="btn btn-box  align-items-center" style="color: whitesmoke;">
             {% include 'icons/config_icon.html' %}
         </button>
         <div class="dropdown-content">
-            <a href="#" >
+            <a href="#" onclick="openEditItem(this)">
                 <div class="col-sm-2 d-flex align-items-center item-board-delete-button">
                     {% include 'icons/edit_icon.html' %}
                 </div>
             </a>
-            <a href="#" onclick="deleteItem('{{id}}')">
+            <a href="#" onclick="deleteItem(this)">
                 <div class="col-sm-2 d-flex align-items-center item-board-delete-button">
                     {% include 'icons/delete_icon.html' %}
                 </div>
