--- a/static/styles/dropdown.css
+++ b/static/styles/dropdown.css
@@ -23,6 +23,12 @@
     
 }
 
+.btn-box{
+    border: none;
+    border-radius: 0;
+}
+
+
 .dropdown-content a:hover {
     background-color: #f1f1f1;
 }
