--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -73,7 +73,9 @@
                     <div class="item-board text-center plus-item-board" onclick="openNewItemCreation(this)">+</div>
                 </div>
             </div>
- 
+
+            {% include 'dashboard/board.html' with boardTitle='Doing' id='bor1' %}
+
                       
             
             <div class="list-board-plus" onclick="openNewBoarCreation()">
