--- a/templates/main.html
+++ b/templates/main.html
@@ -322,7 +322,16 @@
       <div id="csrfToken" data-token="{{csrf_token}}"></div>
       <div id="userId" data-user="{{user.id}}"></div>
         
-      <a href="#" onclick="openNewProjectCreation()">Create Project</a>
+      <a href="#" onclick="openNewProjectCreation()" style="border-bottom: 1px solid;">Create Project</a>
+
+      <!-- <a  href="#">Macaco</a> -->
+        {% for project in projects %}
+        <a  href="#">{{ project.name }}</a>
+        {% empty %}
+            <!-- ------------- test user without project -->
+            <span>Nenhum projeto encontrado.</span>  
+        {% endfor %}
+
     </div>
 
     <!-- Modal -->
