stuck in fetch projects by ajax

--- a/templates/main.html
+++ b/templates/main.html
@@ -319,6 +319,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
       <div id="createProjectEndpoint" data-endpoint="{% url 'create-project' %}"></div>
+      <div id="getProjectsEndpoint" data-endpoint="{% url 'get-projects' %}"></div>
       <div id="csrfToken" data-token="{{csrf_token}}"></div>
       <div id="userId" data-user="{{user.id}}"></div>
         
