--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div>
-    <div class="container-title-user-dashboard">
-        <span class="span-title-user-dashboard">Example project</span>
+    <div class="container-title-user-dashboard">        
+        <span class="span-title-user-dashboard" id="selectedProjectTitle">Example project</span>
     </div>
     <div class="dashboard-container  align-items-start justify-content-start">
                
