--- a/templates/main.html
+++ b/templates/main.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <script src="{% static 'js/project.js' %}"></script> 
+    <script src="{% static 'js/board.js' %}"></script> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -148,6 +149,7 @@
         boardClone.style.display = 'block';
         boardParent.append(boardClone);
 
+        createNewBoard('jum');
       }
 
       /* Board */
