--- a/dashboard/templates/dashboard/board.html
+++ b/dashboard/templates/dashboard/board.html
@@ -1,4 +1,8 @@
-<div class="list-board-container">
+{% if hidden %}
+<div class="list-board-container" style="display: none;">
+    {% else %}
+<div class="list-board-container" >
+{% endif %}
     <div class="title-list-board-container d-flex align-items-center justify-content-center">
         <div class="col-sm-2">                    
         </div>
