--- a/templates/main.html
+++ b/templates/main.html
@@ -121,44 +121,39 @@
         
         /* creating into the database */
         var newBoard = createNewBoard(newBoardName);
+        newBoard.then(function(response) { // resolving the promise
+          console.log(response)          
+          
+          /* get container parent */
+          const boardParent = document.getElementById("parent-container");
+          boardParent.getElementsByClassName("list-items-board-child")[0].textContent = ""; // cleaning the items
 
-        newBoard.then(function(response) {
-          console.log(response);
+          /* Clone board element */
+          const element = document.getElementsByClassName('list-board-container')[0];
+          const boardClone = element.cloneNode(true);
 
+          /* define element title */ 
+          //boardClone.getElementsByClassName("title-list-board-container")[0].querySelector("span").textContent = newBoardName  // the box with title, items and plus button, then setting an specific span inside 
+          boardClone.getElementsByClassName("title-list-board-container")[0].querySelector("span").textContent = response.board.name  // the box with title, items and plus button, then setting an specific span inside 
+          boardClone.getElementsByClassName("title-list-board-container")[0].setAttribute('key', response.board.id)
+    
 
-        
-        
-        /*
-        
-        /* get container parent */
-        const boardParent = document.getElementById("parent-container");
-        boardParent.getElementsByClassName("list-items-board-child")[0].textContent = ""; // cleaning the items
-
-        /* Clone board element */
-        const element = document.getElementsByClassName('list-board-container')[0];
-        const boardClone = element.cloneNode(true);
-
-        /* define element title */ 
-        boardClone.getElementsByClassName("title-list-board-container")[0].querySelector("span").textContent = newBoardName  // the box with title, items and plus button, then setting an specific span inside 
-        
-  
-
-        /* define as a sortable */ 
-        // Sortable.create(boardClone.getElementsByClassName("list-items-board")[0], { 
-        Sortable.create(boardClone.getElementsByClassName("list-items-board-child")[0], {  // box just with the items
-          animation: 150,
-          group: 'shared-items',
-          ghostClass: 'hidden-placeholder',          
-        });
+          /* define as a sortable */ 
+          // Sortable.create(boardClone.getElementsByClassName("list-items-board")[0], { 
+          Sortable.create(boardClone.getElementsByClassName("list-items-board-child")[0], {  // box just with the items
+            animation: 150,
+            group: 'shared-items',
+            ghostClass: 'hidden-placeholder',          
+          });
 
 
-        
-        /* generating id for dropdown*/
-        boardClone.getElementsByClassName('dropdown')[0].id = (Math.random() + 1).toString(36).substring(7)
+          
+          /* generating id for dropdown*/
+          boardClone.getElementsByClassName('dropdown')[0].id = (Math.random() + 1).toString(36).substring(7)
 
 
-        boardClone.style.display = 'block';
-        boardParent.append(boardClone);
+          boardClone.style.display = 'block';
+          boardParent.append(boardClone);
 
         })
         .catch(function(error) {
@@ -307,9 +302,7 @@
         closeNav();
       }
 
-      
-
-
+    
       
     </script>
     
