--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -9,51 +9,12 @@
     <div class="dashboard-container  align-items-start justify-content-start">
                
         <div id="parent-container" class="row align-items-start justify-content-start" >
-            {% include 'dashboard/board.html' with boardTitle='random' id='random' %}         
-            <!-- board model -->
-            <div class="list-board-container" style="display: none"> 
-                <div class="title-list-board-container d-flex align-items-center justify-content-center" >
-                    <span></span>
-                </div>
-                
-                <div class="list-items-board flex-row align-items-center justify-content-center">
-                    <div class="list-items-board-child">
-                    </div>
-                    <div class="item-board text-center plus-item-board" onclick="openNewItemCreation(this)">+</div>
-                </div>
-            </div>
-
-            <div class="list-board-container">
-                <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                    <span>To Do</span>
-                </div>
-                
-                <div class="list-items-board flex-row align-items-center justify-content-center">
-                    <div class="list-items-board-child">
-                        <div class="item-board simple-item d-flex align-items-center">Build</div>
-                        <div class="item-board simple-item d-flex align-items-center">Build format it copy delete burn paste</div>
-                        
-                    </div>
-
-                    <div class="item-board text-center plus-item-board" onclick="openNewItemCreation(this)">+</div>
-                </div>
-            </div>
-
-            <div class="list-board-container">
-                <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                    <span>Done</span>
-                </div>
-                
-                <div class="list-items-board flex-row align-items-center justify-content-center">
-                    <div class="list-items-board-child">
-                        <div class="item-board simple-item d-flex align-items-center">Testing</div>
-                        
-                    </div>
-
-                    <div class="item-board text-center plus-item-board" onclick="openNewItemCreation(this)">+</div>
-                </div>
-            </div>
- 
+            <!-- board model, not displayed -->            
+            {% include 'dashboard/board.html' with boardTitle='random' id='random'  hidden='true' %}             
+            
+            <!-- {/*% for project in projects %}
+                {/*% include 'dashboard/board.html' with boardTitle=project.name id=project.id %*/}             
+            {% endfor %*/} -->
             
             
             <div class="list-board-plus" onclick="openNewBoarCreation()">
