--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -15,7 +15,13 @@
             <!-- {/*% for project in projects %}
                 {/*% include 'dashboard/board.html' with boardTitle=project.name id=project.id %*/}             
             {% endfor %*/} -->
+
+            <div id="bag" style="color: white;">
+                {% for project in projects %}
+                <h2>{{ project.name }}</h2>
+                {% endfor %}
             
+            </div>
             
             <div class="list-board-plus" onclick="openNewBoarCreation()">
                 <div class="d-flex align-items-center justify-content-center">
