--- a/dashboard/templates/dashboard/item.html
+++ b/dashboard/templates/dashboard/item.html
@@ -4,7 +4,7 @@
     <div class="simple-item col-sm-10 d-flex align-items-center" style="overflow: hidden;">{{text}}</div>
     
     <!-- the ids and arguments should be created dinamically -->
-    <div class="dropdown col-sm-2" id="{{id}}" onclick="toggleDropdown(this.id)">
+    <div class="dropdown col-sm-2" id="item-{{id}}" onclick="toggleDropdown(this.id)">
         <button class="btn btn-box  align-items-center" style="color: whitesmoke;">
             {% include 'icons/config_icon.html' %}
         </button>
